---------------------------------------------------------------------------------------------------
Version: 20.0.6
Date: 2020-12-04
  Features:
    - Updated to Factorio 1.1.
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.0.5
Date: 2020-02-29
  Features:
  Changes:
  Bugfixes:
    - fixed the command errors introduced on last update
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.0.4
Date: 2020-02-16
  Features:
  Changes:
    - use latest GUI & style library for compatibility with my other mods
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.0.3
Date: 2020-02-02
  Features:
  Changes:
  Bugfixes:
    - fix character-corpse entity icon error from change in Factorio 0.18.3
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.0.2
Date: 2020-01-23
  Features:
    - Updated to Factorio 0.18 as-is
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.1
Date: 2020-01-19
  Features:
    - Initial Public Release
  Changes:
  Bugfixes:
  Info: